--- a/css/main.css
+++ b/css/main.css
@@ -3245,19 +3245,24 @@ body {
 /*         Page: Technologies          */
 /* =================================== */
 
-.video {
+.technologies .tabs__body {
+  padding: 0;
+  height: 420px;
+}
+
+.technologies .tabs__item,
+.video,
+.video__box {
   height: 100%;
+}
+
+.video {
   position: relative;
 }
 
 .video .upping {
   position: absolute;
   top: 20px;left: 20px;
-}
-
-.video__box {
-  height: 100%;
-  min-height: 420px;
 }
 
 .video__box {
